# distributed-agorithms

./: .gitignore  README.md
paxos/: LICENSE  paxos.cabal  stack.yaml
paxos/src/: Agents.hs  Lib.hs  Types.hs  Utils.hs
