name:           paxos
version:        0.1.0.0
description:    https://github.com/vagoum/distalgs#paxos
bug-reports:    https://github.com/vagoum/distalgs/issues
author:         Vasilis Gkoumas
maintainer:     bgoumas@gmail.com
copyright:      2018 Vasilis Gkoumas
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

library
  hs-source-dirs:     src
  exposed-modules:    Lib, Agents, Messages
  build-depends:      base >=4.7 && <5
                    , distributed-process
                    , network-transport-tcp
                    , binary

  default-language:   Haskell2010
  ghc-options:        -Wall

executable paxos-exe
  main-is:            Main.hs
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5
                    , paxos
  default-language:   Haskell2010

test-suite paxos-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                     base >=4.7 && <5
                   , paxos
  default-language: Haskell2010
